--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,9 +24,13 @@
 }
 
 #orange {
-	background-image: url("http://aamodtsapplefarm.com.s132576.gridserver.com/wp-content/uploads/2011/09/honeycrisp-apples.jpg");
+	
+	/*background-color: orange;*/
+	background: url("orange.jpg") top left;
+	background-size: 200px 200px;
 	height: 200px;
 	width: 200px;
+	/*background-position: top left;*/
 }
 
 #banana {
